# fleetflow

./: .dockerignore  .gitignore  .mcp.json  .mise.toml  BOLLARD_API_MAPPING.md  BOLLARD_DEPRECATION_FIX.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml  cliff.toml  compose.yaml  deny.toml  fleetflowd.kdl  history.txt  install.sh  justfile
.claude/: CLAUDE.md  bollard-guide.md  ports.md  worker-files.kdl
.fleetflow/: cp.kdl  fleet.kdl  flow.kdl  flow.kdl.backup
.gemini/: GEMINI.md  settings.json
.github/: ISSUE_1password_integration.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.serena/: project.yml
crates/fleet-agent/: Cargo.toml
crates/fleet-agent/src/: agent.rs  deploy.rs  heartbeat.rs  lib.rs  main.rs  monitor.rs
crates/fleetflow/: Cargo.toml  README.md
crates/fleetflow-atom/: Cargo.toml  README.md
crates/fleetflow-atom/src/: discovery.rs  error.rs  loader.rs  model.rs  parser.rs  template.rs
crates/fleetflow-atom/src/model/: cloud.rs  flow.rs  mod.rs  port.rs  service.rs  stage.rs  volume.rs
crates/fleetflow-atom/src/parser/: cloud.rs  mod.rs  port.rs  service.rs  stage.rs  tests.rs  volume.rs
crates/fleetflow-build/: Cargo.toml  README.md
crates/fleetflow-build/src/: auth.rs  builder.rs  context.rs  error.rs  lib.rs  progress.rs  pusher.rs  resolver.rs
crates/fleetflow-cli/: Cargo.toml  README.md
crates/fleetflow-cli/src/: main.rs
crates/fleetflow-cli/src/tui/: init.rs  mod.rs
crates/fleetflow-cloud/: Cargo.toml  README.md
crates/fleetflow-cloud-aws/: Cargo.toml
crates/fleetflow-cloud-aws/src/: cloud_provider.rs  error.rs  instance_type.rs  lib.rs  server_provider.rs
crates/fleetflow-cloud-aws/src/models/: config.rs  mod.rs  security_group.rs  subnet.rs
crates/fleetflow-cloud-cloudflare/: Cargo.toml  README.md
crates/fleetflow-cloud-cloudflare/src/: dns.rs  error.rs  lib.rs  provider.rs  wrangler.rs
crates/fleetflow-cloud/src/: action.rs  error.rs  lib.rs  provider.rs  server_provider.rs  ssh.rs  state.rs  tailscale.rs
crates/fleetflow-config/: Cargo.toml  README.md
crates/fleetflow-config/src/: error.rs  lib.rs
crates/fleetflow-container/: Cargo.toml  README.md
crates/fleetflow-container/src/: compose.rs  converter.rs  docker.rs  engine.rs  error.rs  lib.rs  port.rs  quadlet.rs  runtime.rs  waiter.rs
crates/fleetflow-container/tests/: engine_test.rs
crates/fleetflow-controlplane/: Cargo.toml
crates/fleetflow-controlplane/src/: agent_registry.rs  auth.rs  cert.rs  crypto.rs  db.rs  lib.rs  log_router.rs  model.rs  server.rs  server_provider.rs
crates/fleetflow-controlplane/src/handlers/: agent.rs  build.rs  container.rs  cost.rs  deploy.rs  dns.rs  health.rs  mod.rs  project.rs  server.rs  service.rs  stage.rs  tenant.rs  volume.rs
crates/fleetflow-controlplane/tests/: agent_command_test.rs  channel_integration.rs  deploy_execute_test.rs  server_crud_test.rs
crates/fleetflow-core/: Cargo.toml  README.md
crates/fleetflow-core/src/: discovery.rs  error.rs  lib.rs  loader.rs  onepassword.rs  template.rs
crates/fleetflow-core/src/model/: cloud.rs  flow.rs  mod.rs  port.rs  process.rs  service.rs  stage.rs  tenant.rs  volume.rs
crates/fleetflow-core/src/parser/: cloud.rs  mod.rs  port.rs  service.rs  stage.rs  tenant.rs  tests.rs  volume.rs
crates/fleetflow-mcp/: Cargo.toml
crates/fleetflow-mcp/src/: cp.rs  lib.rs
crates/fleetflow-registry/: Cargo.toml
crates/fleetflow-registry/src/: discovery.rs  error.rs  lib.rs  model.rs  parser.rs
crates/fleetflow/resources/templates/: fullstack.kdl  simple.kdl
crates/fleetflow/src/: build.rs  docker.rs  main.rs  play.rs  self_update.rs  setup.rs  utils.rs
crates/fleetflow/src/commands/: auth.rs  cloud.rs  compose.rs  cp.rs  cp_client.rs  daemon.rs  deploy.rs  down.rs  exec.rs  logs.rs  mod.rs  ps.rs  quadlet.rs  registry.rs  restart.rs  stage.rs  start.rs  status.rs  stop.rs  up.rs  validate.rs
crates/fleetflow/src/tui/: init.rs
crates/fleetflow/tests/: cli_test.rs  config_priority_test.rs  override_test.rs  port_cleanup_test.rs  stage_lifecycle_test.rs  workload_test.rs
crates/fleetflow/tests/common/: mod.rs
crates/fleetflowd/: Cargo.toml  fleetflowd.example.kdl
crates/fleetflowd/src/: config.rs  daemon.rs  dashboard.html  health.rs  main.rs  web.rs
crates/flow-atom/: Cargo.toml
crates/flow-atom/src/: discovery.rs  error.rs  lib.rs  loader.rs  model.rs  parser.rs  template.rs
crates/flow-cli/: Cargo.toml
crates/flow-cli/resources/templates/: fullstack.kdl  simple.kdl
crates/flow-cli/src/: main.rs
crates/flow-cli/src/tui/: terminal.rs
crates/flow-config/: Cargo.toml
crates/flow-config/src/: error.rs  lib.rs
crates/flow-container/: Cargo.toml
crates/flow-container/src/: converter.rs  docker.rs  lib.rs  runtime.rs
design/: 01-kdl-parser.md  02-orbstack-integration.md  03-docker-build.md  04-cloud-infrastructure.md  05-dns-integration.md  06-image-push.md  07-mcp-implementation.md  08-workload-mechanism.md  09-test-infrastructure.md  11-core-renaming.md  12-1password-integration.md  12-stage-command.md  13-fleet-registry.md  NAMING.md
doc/: workflow-design.md
docs/: DEVELOPMENT.md
examples/: flow.kdl
guides/: 01-orbstack-integration.md  02-docker-build.md  03-ci-deployment.md  04-kdl-structure-visual.md  05-mcp-integration.md  best-practices.md  feedback-creo-memories.md  use-case-creo-memories.md
infra/: Dockerfile.fleetflowd  fleetflowd-local.kdl
scripts/: build-install-idle-shutdown.sh  idle-shutdown.service  idle-shutdown.sh  idle-shutdown.timer  install-idle-shutdown.sh  install.sh  provision-fleet-agent.sh  provision-worker-base.sh  spawn-build-worker.sh  test-environments.sh  worker-init.sh
spec/: 01-core-concepts.md  02-kdl-parser.md  03-cli-commands.md  04-auto-import.md  05-template-variables.md  06-orbstack-integration.md  07-docker-build.md  07-kdl-syntax-reference.md  08-cloud-infrastructure.md  09-dns-integration.md  09-stage-command.md  10-image-push.md  11-mcp-server.md  12-workloads.md  13-integration-testing.md  15-deploy-build-usecase.md  (+5 more)
(+2230 files in other folders)
