[workspace]
resolver = "2"
members = [
  "crates/fleetflow-cli",
  "crates/fleetflow-atom",
  "crates/fleetflow-container",
  "crates/fleetflow-config",
  "crates/fleetflow-build",
  "crates/fleetflow-cloud",
  "crates/fleetflow-cloud-sakura",
  "crates/fleetflow-cloud-cloudflare",
]

[workspace.package]
version = "0.2.12"
edition = "2024"
authors = ["Mito <mito@chronista.club>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chronista-club/fleetflow"
homepage = "https://github.com/chronista-club/fleetflow"
keywords = ["container", "docker", "orchestration", "kdl", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "3"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"

# KDL parser
kdl = "6"

# Template engine
tera = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Docker
bollard = "0.19"

# Configuration
config = "0.13"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
chrono = "0.4"

# Build utilities
tar = "0.4"
flate2 = "1.0"
indicatif = "0.17"

# Testing
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
