[package]
name = "fleetflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A beautiful container orchestration tool using KDL configuration"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "fleetflow"
path = "src/main.rs"

[dependencies]
# Workspace crates
fleetflow-atom = { version = "0.2.0-devel", path = "../fleetflow-atom" }
fleetflow-container = { version = "0.2.0-devel", path = "../fleetflow-container" }
fleetflow-config = { version = "0.2.0-devel", path = "../fleetflow-config" }

# External dependencies
clap.workspace = true
colored.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
bollard.workspace = true
futures-util.workspace = true

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true
