[package]
name = "fleetflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A beautiful container orchestration tool using KDL configuration"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "fleetflow"
path = "src/main.rs"

[dependencies]
# Workspace crates
fleetflow-atom = { version = "0.2.6", path = "../fleetflow-atom" }
fleetflow-container = { version = "0.2.6", path = "../fleetflow-container" }
fleetflow-config = { version = "0.2.6", path = "../fleetflow-config" }
fleetflow-build = { version = "0.2.6", path = "../fleetflow-build" }
fleetflow-cloud = { version = "0.2.6", path = "../fleetflow-cloud" }
fleetflow-cloud-sakura = { version = "0.2.6", path = "../fleetflow-cloud-sakura" }
fleetflow-cloud-cloudflare = { version = "0.2.6", path = "../fleetflow-cloud-cloudflare" }

# External dependencies
clap.workspace = true
colored.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
bollard.workspace = true
futures-util.workspace = true
serde_json.workspace = true
base64.workspace = true

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true
