[package]
name = "fleetflow-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloud infrastructure provider abstraction for FleetFlow"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["fs"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
