[package]
name = "fleetflow-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for FleetFlow"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3.2"
