[package]
name = "fleetflow-container"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Container runtime integration for FleetFlow"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
fleetflow-core = { version = "0.3.2", path = "../fleetflow-core" }

bollard.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
nix = { version = "0.29", features = ["signal", "process"] }
