[package]
name = "fleetflow-controlplane"
description = "FleetFlow Control Plane — central management server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
fleetflow-core.workspace = true
fleetflow-container.workspace = true
fleetflow-cloud.workspace = true
fleetflow-cloud-sakura.workspace = true
fleetflow-cloud-cloudflare.workspace = true
fleetflow-cloud-aws.workspace = true

# Communication
unison.workspace = true

# Docker
bollard.workspace = true

# Database
surrealdb = { version = "3.0", features = ["kv-mem"] }

# Auth
jsonwebtoken = "10.3"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Async runtime
tokio.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utils
chrono.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
fleetflow-controlplane = { path = ".", features = ["test-utils"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
