[package]
name = "fleetflow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for FleetFlow"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
kdl.workspace = true
unison-kdl.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tera.workspace = true
tracing.workspace = true
regex = "1.10"
glob.workspace = true

[dev-dependencies]
tempfile = "3.8"
