[package]
name = "fleetflow-mcp"
description = "FleetFlow MCP server for Claude Code integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace crates
fleetflow-core = { version = "0.4.1", path = "../fleetflow-core" }
fleetflow-container = { version = "0.4.1", path = "../fleetflow-container" }
fleetflow-config = { version = "0.4.1", path = "../fleetflow-config" }
fleetflow-build = { version = "0.4.1", path = "../fleetflow-build" }

# External dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util.workspace = true
bollard.workspace = true
