[package]
name = "fleetflow-mcp"
description = "FleetFlow MCP server for Claude Code integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace crates
fleetflow-core.workspace = true
fleetflow-container.workspace = true
fleetflow-config.workspace = true
fleetflow-build.workspace = true

# MCP SDK (official)
rmcp.workspace = true
schemars.workspace = true

# External dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util.workspace = true
bollard.workspace = true
