[package]
name = "fleetflow-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fleet Registry - manage multiple fleets and servers"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fleetflow-core.workspace = true
kdl.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
