[package]
name = "fleetflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A beautiful container orchestration tool using KDL configuration"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
# Workspace crates
fleetflow-core.workspace = true
fleetflow-container.workspace = true
fleetflow-config.workspace = true
fleetflow-build.workspace = true
fleetflow-cloud.workspace = true
fleetflow-cloud-sakura.workspace = true
fleetflow-cloud-cloudflare.workspace = true
fleetflow-mcp.workspace = true
fleetflow-registry.workspace = true

# External dependencies
clap.workspace = true
colored.workspace = true
kdl.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
bollard.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# TUI dependencies
ratatui.workspace = true
crossterm.workspace = true

# Self-update
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }

# Regex for template expansion
regex = "1"

# Timestamp for setup logging
chrono.workspace = true

# Process management (daemon stop)
libc = "0.2"

# Browser opening (Auth0 login)
open = "5"

# Control Plane client
unison.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
temp-env.workspace = true

